# Narwhal

./: Cargo.toml  README.md  build.rs  narwhal.desktop
resources/: messages.po
src/: config_helpers.rs  confighelpers.rs  default_state.rs  defaultstate.rs  icon_helpers.rs  iconhelpers.rs  kb_parser.rs  kbparser.rs  lib_style.rs  libstyle.rs  main.rs  ui_helpers.rs  uihelpers.rs
