[package]
name = "narwhal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
freedesktop-icons = "0.2.3"
gettext-rs = "0.7.0"
serde = "1.0.159"
serde_derive = "1.0.159"
toml = "0.7.3"
whoami = "1.4.0"
xdg-utils = "0.4.0"

[profile.release]
lto = "thin"

[dependencies.iced]
version="0.10.0"
features=["svg", "tokio"]

[dependencies.iced_aw]
version="0.6.0"

[dependencies.iced_style]
version="0.9.0"