[package]
name = "narwhal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmic-time = {git = "https://github.com/pop-os/cosmic-time.git", features = ["iced", "once_cell"]}
env_logger = "0.10.0"
freedesktop-icons = "0.2.3"
gettext-rs = {version = "0.7.0", features = ["gettext-system"]}
oceania_style = { git = "https://github.com/Eclipse32767/oceania_style.git", version = "0.1.1" }
serde = "1.0.189"
serde_derive = "1.0.159"
toml = "0.8.4"
whoami = "1.4.0"
xdg-utils = "0.4.0"

[profile.release]
lto = "thin"

[dependencies.iced]
version="0.10.0"
features=["svg", "tokio"]

[dependencies.iced_aw]
version="0.6.0"
features=["icons"]

[dependencies.iced_style]
version="0.9.0"
